--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
